# Bad-Apple-Font

./: .gitignore  .gitmodules  LICENSE  README.md  hack  make.sh  util.sh
01_Download_Video/: .gitignore  badapple.sha256  run.sh  yt-dlp.sha256
02_Extract_Frames/: .gitignore  run.sh
03_Vectorization/: .gitignore  main.py  potrace.sha256  run.sh
04_Make_Font/: .gitignore  base.sfd.sha256  fontforge.sha256  import_svg.py  main.py  merge.py  run.sh
05_Export_Font/: run.sh
05_WASM/: Cargo.toml  run.sh
05_WASM/src/: lib.rs
06_HarfBuzz/: meson-1.2.1.tar.gz.sha256  run.sh
06_WASM/: run.sh
06_WASM/src/: lib.rs
07_HarfBuzz/: .gitignore  run.sh
07_Install_Font/: run.sh
