[package]
authors = ["hsfzxjy <hsfzxjy@gmail.com>"]
edition = "2021"
name = "bad-apple-shaper"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
slice-group-by = "0.3.1"
wasm-bindgen = "0.2.84"
harfbuzz-wasm = { git = "https://github.com/harfbuzz/harfbuzz-wasm-examples.git", rev = "ec67ff4c1a7fdb815b5f624ef58d094ee9e56f97" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
